--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="images-container">
           <div class="image-container">
             <a href="#">
-              <img src="./images/tea-bags.jpg" alt="Best seclection teas">
+              <img src="tea-bags.jpg" alt="Best seclection teas">
               <main class="image_content">
                 <h3 class="image_heading">Shop Balaf</h3>
               </main>
@@ -103,7 +103,7 @@
           </div>
           <div class="image-container">
             <a href="#">
-              <img src="./images/fragrant-oils.jpg" alt="Best selection of fragrant oils">
+              <img src="fragrant-oils.jpg" alt="Best selection of fragrant oils">
               <main class="image_content">
                 <h3 class="image_heading">Shop ULA</h3>
               </main>
@@ -111,7 +111,7 @@
           </div>
           <div class="image-container">
             <a href="#">
-              <img src="./images/aperitifs-oils.jpg" alt="Best seclection of aperitifs oils">
+              <img src="aperitifs-oils.jpg" alt="Best seclection of aperitifs oils">
               <main class="image_content">
                 <h3 class="image_heading">Shop Apery</h3>
               </main>
@@ -127,25 +127,25 @@
         </div>
         <div class="images-container">
           <div class="image-container">
-            <a href="#"><img src="./images/essential-1.jpg" alt="#"></a>
+            <a href="#"><img src="essential-1.jpg" alt="#"></a>
             <main class="image_content">
               <h3 class="image_heading">Three Balkan Roses Tea</h3>
             </main>
           </div>
           <div class="image-container">
-            <a href="#"><img src="./images/essential-2.jpg" alt="#"></a>
+            <a href="#"><img src="essential-2.jpg" alt="#"></a>
             <main class="image_content">
               <h3 class="image_heading">Happy Bio Tea (Caffeine free)</h3>
             </main>
           </div>
           <div class="image-container">
-            <a href="#"><img src="./images/essential-3.jpg" alt="#"></a>
+            <a href="#"><img src="essential-3.jpg" alt="#"></a>
             <main class="image_content">
               <h3 class="image_heading">Limited Allium Tea Collection</h3>
             </main>
           </div>
           <div class="image-container">
-            <a href="#"><img class="essential_image4" src="./images/essential-4.jpg" alt="#"></a>
+            <a href="#"><img class="essential_image4" src="essential-4.jpg" alt="#"></a>
             <main class="image_content">
               <h3 class="image_heading">Assorted Teabag Balaf 4-<br>Section Gift Box</h3>
             </main>
@@ -158,7 +158,7 @@
           <!--Left Card-->
           <div class="left-card">
             <div class="image-container">
-              <img src="./images/herbs-boose.jpg" alt="Aperitifs drinks">
+              <img src="herbs-boose.jpg" alt="Aperitifs drinks">
             </div>
           </div>
           <!--Right Card-->
@@ -187,19 +187,19 @@
         <div class="right-card">
           <div class="images-container">
             <div class="image-container">
-              <a href="#"><img src="./images/what-is-tea.jpg" alt="#"></a>
+              <a href="#"><img src="what-is-tea.jpg" alt="#"></a>
               <main class="image_content">
                 <h3 class="image_heading">What are herbs?</h3>
               </main>
             </div>
             <div class="image-container">
-              <a href="#"><img src="./images/how-to-prepare-tea.jpg" alt="#"></a>
+              <a href="#"><img src="how-to-prepare-tea.jpg" alt="#"></a>
               <main class="image_content">
                 <h3 class="image_heading">How Do I prepare My tea</h3>
               </main>
             </div>
             <div class="image-container">
-              <a href="#"><img class="education_image3" src="./images/tea-party.jpg" alt="#"></a>
+              <a href="#"><img class="education_image3" src="tea-party.jpg" alt="#"></a>
               <main class="image_content">
                 <h3 class="image_heading">Organize tea party for your friends</h3>
               </main>
@@ -286,7 +286,7 @@
         <aside class="eBook">
           <h4 class="site-footer-center-headline">Herbs collection 2023 - Ebook</h4>
           <div class="button-container">
-            <a href="#" class="downloadButton"><img src="./images/download.png" alt="Download"></a>
+            <a href="#" class="downloadButton"><img src="download.png" alt="Download"></a>
           </div>
         </aside>
       </section>
@@ -297,10 +297,10 @@
           <p> Serbia: 014/344-86285 &nbsp;|&nbsp; International: +381-14-344-86285</p>
           <p> Monday-Friday: 7:30am-3:30pm CET</p>
           <menu class="social-menu">
-            <a href="#"><img src="./images/facebook-icon.png" alt="Our Facebook"></a>
-            <a href="#"><img src="./images/linkedin-icon.png" alt="Our LinkedIn"></a>
-            <a href="#"><img src="./images/pinterest-icon.png" alt="Our Pinterest"></a>
-            <a href="#"><img src="./images/instagram-icon.png" alt="Our Instagram"></a>
+            <a href="#"><img src="facebook-icon.png" alt="Our Facebook"></a>
+            <a href="#"><img src="linkedin-icon.png" alt="Our LinkedIn"></a>
+            <a href="#"><img src="pinterest-icon.png" alt="Our Pinterest"></a>
+            <a href="#"><img src="instagram-icon.png" alt="Our Instagram"></a>
           </menu>
           <div class="legal">
             <p class="legal_text">© 2023 Aquila Herbs, All Rights Reserved <br>
